# Triangle3API

./: .gitmodules  CMakeLists.txt  README.txt
triangles/: CMakeLists.txt
triangles/include/triangles/renderers/: opengl_renderer.h
triangles/src/triangles/: main.cpp
triangles/src/triangles/renderers/: opengl_renderer.cpp
